
Blinker Changelog
=================

Version 0.9
-----------

Not yet released

- Added ``Signal.temporarily_connected_to`` context manager


Version 0.8
-----------

Released February 14, 2010

- Initial release
- Extracted from flatland.util.signals
- Added Python 2.4 compatability
- Added nearly functionaly Python 3.1 compatability (everything except
  connecting to instance methods seems to work.)