@@ -3,4 +3,6 @@ include README
 include AUTHORS
 include CHANGES
 recursive-include tests *py
-
+recursive-include docs/source *rst *py
+recursive-include docs/text *txt
+recursive-include docs/html *html *txt *png *css *js *inv
