@@ -30,8 +30,9 @@ sent by any sender.
 Changelog Summary
 -----------------
 
-0.9 (development)
- - Sphinx docs
+0.9 (February 26, 2010)
+ - Sphinx docs, project website
+ - Added ``with a_signal.temporarily_connected_to(receiver): ...`` support
 
 0.8 (February 14, 2010)
  - First independent release separate from flatland
